--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -4,17 +4,18 @@
   "description": "Coffee Application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "author": "Tim Sanders, Cody Barber",
+  "author": "Cody Barber",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
+    "cors": "^2.7.1",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
     "hbs": "^4.0.0",
     "mongoose": "^4.5.3",
+    "my-bcrypt": "^1.0.2",
     "rand-token": "^0.2.1",
     "stripe": "^4.7.0"
   }
